@@ -1,3 +1,9 @@
+Tue May 27 17:47:25 2003  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: implement open file, mark changed files
+	  as changed, the toolbar has now open and not load and load label
+	  changed to "Load and Run" to be clear
+
 Tue May 27 16:59:54 2003  George Lebl <jirka@5z.com>
 
 	* src/Makefile.am, src/lexer.[lh], src/calc.[chl, src/gnome-genius.c,
